// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Surface examples > Alternate should render correctly 1`] = `
<div>
  <div
    class="v-surface v-alternate"
  >
    Example
  </div>
</div>
`;

exports[`Surface examples > Default should render correctly 1`] = `
<div>
  <div
    class="v-surface"
  >
    Example
  </div>
</div>
`;
